--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,49 +6,35 @@ services:
         build: .
         volumes:
             - ./www:/var/www/
-        networks:
-            - code-network
     web:
-        image: nginx:latest
+        image: nginx:1.15.0
         container_name: webserver
         ports:
             - "80:80"
         volumes:
             - ./www:/var/www/
-            - ./site.conf:/etc/nginx/conf.d/default.conf
-        networks:
-            code-network:
-              ipv4_address: 172.25.0.101
+            - ./nginx/site.conf:/etc/nginx/conf.d/default.conf
         links:
             - php
     mysql:
-        image: mariadb:latest
+        image: bitnami/mariadb
         container_name: mariadb
+        restart: unless-stopped
         ports:
             - "3306:3306"
         volumes:
-            - ./data/mysql:/var/lib/mysql
+            - ./mariadb/data/mysql:/bitnami
         environment:
-          -MYSQL_ROOT_PASSWORD: root
-        networks:
-            code-network:
-              ipv4_address: 172.25.0.100
+          MARIADB_ROOT_PASSWORD: root
     phpmyadmin:
       image: phpmyadmin/phpmyadmin
       container_name: phpmyadmin
       links:
-        - mysql:mariadb
+        - mysql
       environment:
-        PMA_HOST: mysql
+        PMA_HOST: mariadb
         PMA_PORT: 3306
       ports:
         - 8181:80
-      networks:
-          - code-network
-
-networks:
-    code-network:
-        driver: bridge
-        ipam:
-          config:
-          - subnet: 172.25.0.0/24
+      volumes:
+        - ./phpmyadmin/config.inc.php:/etc/phpmyadmin/config.inc.php
